Update package description and dependencies for thermal_radiometric_visualizer

--- a/src/thermal_radiometric_visualizer/package.xml
+++ b/src/thermal_radiometric_visualizer/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>thermal_radiometric_visualizer</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Visualizer for thermal radiometric data</description>
   <maintainer email="parvmaheshwari2002@gmail.com">dtc</maintainer>
   <license>TODO: License declaration</license>
 
@@ -15,6 +15,9 @@
   <exec_depend>qt_gui</exec_depend>
   <exec_depend>rqt_gui</exec_depend>
   <exec_depend>rqt_gui_py</exec_depend>
+  <exec_depend>numpy</exec_depend>
+  <exec_depend>python3-opencv</exec_depend>
+  <exec_depend>python3-pyqt5</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
